--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<h1>  </h1>
 							<h2> Govind Ramachandran </h2>
 							<h3> Nick Name : Kannan (My Close Friends Call me the Same) </h3>
-							<h3> Systems Engineer @ UST Global ✪ NOC/IMS/CIS Specialist </h3>
+							<h3> Systems Engineer @ UST ✪ NOC/IMS/CIS Specialist </h3>
 							<h3> ITIL® Certified ✪ Azure/MCP/MCSA/MCSE/GCP Certified </h3>
 							<h4> <i> Being Myself Got Me to Where I am Today 😉 </i></h4>
 							<!--<h4> <i> Only I can change my life. No one can do it for me...👊 </i></h4>--!>
