--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<p>Contact Me: govindr95@outlook.com </p>
 														
 			<li class="list-style-none"><a href="https://wa.link/4100je" class="button also">Connect Me on Whatsapp</a></li><br></br>
-			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindrkannan" class="button also">Find me on LinkedIn</a></li>
+			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindrkannan" class="button also">Follow me on LinkedIn</a></li>
 							
 				</section>
 			<!-- Footer -->
