--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 							<a href="" class="button also">Certifications</a>
 							<ul>
 							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
-							<li><a href="https://www.youracclaim.com/users/govindrkannan"><center>Acclaim Profile</center></a></li>
+							<li><a href="https://www.credly.com/users/govindrkannan"><center>Credly Profile</center></a></li>
 							<li><a href="https://www.axelos.com/profile/public?u=c009332f-f055-4397-a54b-374b655f1d6f"><center>Axelos Profile</center></a></li>
 							<li><a href="https://www.credential.net/profile/govindr"><center>Credential</center></a></li>
 							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
