--- a/about.html
+++ b/about.html
@@ -87,8 +87,8 @@
 								<li><a href="about.html" class="button">Back to Top</a></li>
 							</ul>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/govindrulez" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/govindrulez" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/govindrkannan" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/govindrkannan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>@Govind All rights reserved.</li>
