--- a/expertise.html
+++ b/expertise.html
@@ -69,8 +69,11 @@
 <li>Professional with about 6 Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.</li>
 <li>Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE) # 15634946</li>
 <li>Certified in ITIL® Foundation in IT Service Management # GR750498412GR</li>
+<li>Certified in Microsoft 365 Certified: Fundamentals # H761-9957 </li>
+<li>Certified in Microsoft Certified: Azure Fundamentals # H589-4458 </li>	
 <li>Certified in Microsoft Azure Administrator Associate # H583-5386</li>
-<li>Certified in Lean Six Sigma White Belt # IuAqvWLp3b</li>
+<li>Certified in Microsoft 365 Certified: Modern Desktop Administrator Associate # H662-4239</li>
+<li>Certified in Lean Six Sigma White Belt # izHkwY2Ysb</li>
 <li>Certification Course in Advanced Diploma in IT Infrastructure and Network Engineering # 33043</li>
 <li>Certified in Google Cloud Certified Professional Cloud Architect# WWwnVY</li>
 <li>Certified in WooRank Certified Marketing Partner</li>
