--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<h1>  </h1>
 							<h2> Govind Ramachandran </h2>
 							<h3> Nick Name : Kannan (My Close Friends Call me the Same) </h3>
-							<h3> Systems Engineer @ UST ✪ NOC/IMS/CIS Specialist </h3>
+							<h3> Associate III - CIS @ UST ✪ NOC/IMS/CIS Specialist </h3>
 							<h4> ITIL® Certified ✪ MDAA/Azure/MCP/MCSA/MCSE/GCP/IBM Certified </h4>
 							<h5> <i> Being Myself Got Me to Where I am Today 😉 </i></h5>
 							<!--<h4> <i> Only I can change my life. No one can do it for me...👊 </i></h4>--!>
