--- a/expertise.html
+++ b/expertise.html
@@ -65,7 +65,7 @@
 
 <ul><li>Objective : Intelligent, skilled and professional candidate who is looking to be associated with progressive organization that gives me the scope to apply my educational, professional skills and provides me with advancement opportunity and knowledge empowerment.</li>
 <li>An enthusiastic and competent IT professional with about 6 years of experience in Implementation and Providing Technical Support for IT Infrastructure which mainly includes Windows Server and Windows Desktop services.</li>
-<li>Currently working as Systems Engineer @ UST in Thiruvananthapuram.</li>
+<li>Currently working as Associate III - CIS @ UST in Thiruvananthapuram.</li>
 <li>Professional with about 6 Years of Experience in Both Technical Support (IT Environment) and Digital Marketing.</li>
 <li>Certified in MCP, MCSA & Microsoft Certified Solutions Expert (MCSE) # 15634946</li>
 <li>Certified in ITIL® Foundation in IT Service Management # GR750498412GR</li>
