--- a/index.html
+++ b/index.html
@@ -133,5 +133,9 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
+     crossorigin="anonymous"></script>
+						
 </html>
 <!--HTML -LANDED-->
