--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 	<li><a href="https://www.facebook.com/govindrkannan" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 	<li><a href="https://www.linkedin.com/in/govindrkannan" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 	<li><a href="https://github.com/govindrkannan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+	<li><a href="https://www.youtube.com/c/govindrkannan" class="icon alt fa-youtube"><span class="label">LinkedIn</span></a></li>
 	</ul>
 	<ul class="copyright">
 	<li>@Govind All rights reserved.</li>
