--- a/about.html
+++ b/about.html
@@ -82,19 +82,21 @@
 <!-- Image -->
 				
 			<!-- Footer -->
-				<footer id="footer">
-				<ul class="actions">
-								<li><a href="about.html" class="button">Back to Top</a></li>
-							</ul>
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/govindrkannan" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/govindrkannan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>@Govind All rights reserved.</li>
-					</ul>
-				</footer>
-
+	<footer id="footer">
+	<ul class="actions">
+	<li><a href="expertise.html" class="button">Back to Top</a></li>
+	</ul>
+	<ul class="icons">
+	<li><a href="https://www.facebook.com/govindrkannan" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+	<li><a href="https://www.linkedin.com/in/govindrkannan" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+	<li><a href="https://github.com/govindrkannan" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+	<li><a href="https://www.youtube.com/c/govindrkannan" class="icon alt fa-youtube"><span class="label">LinkedIn</span></a></li>
+	</ul>
+	<ul class="copyright">
+	<li>@Govind All rights reserved.</li>
+	</ul>
+	</footer>
+			
 		</div>
 
 		<!-- Scripts -->
