--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 														
 			<li class="list-style-none"><a href="https://wa.link/4100je" class="button also">Connect Me on Whatsapp</a></li><br></br>
 			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindrkannan" class="button also">Follow me on LinkedIn</a></li>
+			<li class="list-style-none"><a href="https://paypal.me/govindrkannan" class="button also">Pay Me on Paypal</a></li>
 							
 				</section>
 			<!-- Footer -->
