--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<p>Contact Me: govindr015@gmail.com </p>
 							<p>Contact Me: govindr95@outlook.com </p>
 														
-			<li class="list-style-none"><a href="https://wa.link/4100je" class="button also">Connect Me on Whatsapp</a></li><br></br>
+			<li class="list-style-none"><a href="https://api.whatsapp.com/send?phone=919446543585" class="button also">Connect Me on Whatsapp</a></li><br></br>
 			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindrkannan" class="button also">Follow me on LinkedIn</a></li><br></br>
 			<li class="list-style-none"><a href="https://paypal.me/govindrkannan" class="button also">Pay Me on Paypal</a></li><br></br>
 							
