--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<li><a href="https://angel.co/u/govindrkannan"><center>Angel List</center></a></li>
 							<li><a href="https://en.gravatar.com/govindrkannan"><center>Gravatar</center></a></li>
 							<li><a href="https://wiseintro.co/govindrkannan"><center>WiseIntro</center></a></li>
+							<li><a href="https://linktr.ee/govindrkannan"><center>LinkTree</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 						</ul>
