--- a/about.html
+++ b/about.html
@@ -41,7 +41,9 @@
 							<li><a href="https://www.instagram.com/govindrkannan"><center>Instagram</center></a></li>
 							<li><a href="https://about.me/govindrkannan"><center>About Me</center></a></li>
 							<li><a href="https://angel.co/u/govindrkannan"><center>Angel List</center></a></li>
+							<li><a href="https://en.gravatar.com/govindrkannan"><center>Gravatar</center></a></li>
 							<li><a href="https://wiseintro.co/govindrkannan"><center>WiseIntro</center></a></li>
+							<li><a href="https://linktr.ee/govindrkannan"><center>LinkTree</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 				</ul>
@@ -71,7 +73,7 @@
 		<h4><center style="padding:10px;">My Professional Career </center></h4>
 	<p>I started my career as a freelancer when I was doing my college days. As a freelancer I was able to provide technical support and digital marketing for many customers over a period of more than 3 years. I worked as a freelancer from 2nd February 2015 to 31st August 2018.
 		After that I have Joined SC Soft an IT Company Company in Trivandrum and worked there for a period of 10 Months from September 12th 2018 to July 9th 2019. After that i have taken a small gap from July 2019 to February 2020. 
-		Currently I joined UST Global an MNC as Systems Engineer. </p>
+		Currently I joined UST an MNC as Systems Engineer. </p>
 
 <hr />
 		<header>
