--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<li class="list-style-none"><a href="https://api.whatsapp.com/send?phone=919446543585" class="button also">Connect Me on Whatsapp</a></li><br></br>
 			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindrkannan" class="button also">Follow me on LinkedIn</a></li><br></br>
 			<li class="list-style-none"><a href="https://paypal.me/govindrkannan" class="button also">Pay Me on Paypal</a></li><br></br>
-			<li class="list-style-none"><a href="https://techubcis.blogspot.com" class="button also">Technology Blog</a></li><br></br>
+			<li class="list-style-none"><a href="https://cistechub.blogspot.com" class="button also">Technology Blog</a></li><br></br>
 						
 				</section>
 			<!-- Footer -->
