--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
+							<img src="IBR.png" alt="IBR">
 							<h1>  </h1>
 							<h2> Govind Ramachandran </h2>
 							<h3> Nick Name : Kannan (My Close Friends Call me the Same) </h3>
