--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/abstract.jpg" alt="" /></span>
+					<li class="list-style-none"><a href="" class="button">World Book of Records Listing</a></li>
+					<li class="list-style-none"><a href="" class="button">India Book of Records Listing</a></li>
 					<div class="content">
 						<div class="container">
 							<div class="row">
