--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/abstract.jpg" alt="" /></span>
-					<li class="list-style-none"><a href="" class="button">World Book of Records Listing</a></li>
-					<li class="list-style-none"><a href="" class="button">India Book of Records Listing</a></li>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -93,7 +91,55 @@
 					</div>
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
-		
+
+							
+			<!-- Four -->
+				<section id="four" class="wrapper style1 special fade-up">
+					<div class="container">
+						<header class="major">
+							<h3>Explore More About Me!!!</h3>
+						</header>
+						<div class="box alt">
+							<div class="row uniform">
+								<section class="4u 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<h3>Recognition</h3>
+ 									<li><a href="" class="button">India Book of Records</a></li>
+							</ul>
+								</section>
+								<section class="4u 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-comment"></span>
+									<li><a href="" class="button">World Book of Records</a></li>
+							</ul>
+								</section>
+								<section class="4u$ 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-flask"></span>
+									<li><a href="no-sidebar.html" class="button">Speaking</a></li>
+							</ul>
+								</section>
+								<section class="4u 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<li><a href="https://govindrkannan.github.io/images/Govind.pdf" class="button">Resume</a></li>
+							</ul>
+								</section>
+								<section class="4u 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-file"></span>
+									<ul class="actions">
+								<li><a href="#footer" class="button">Get Involved</a></li>
+							</ul>
+								</section>
+								<section class="4u$ 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<li><a href="index.html" class="button">For a Change, Defend</a></li>
+							</ul>
+								</section>
+							</div>
+						</div>
+						<footer class="major">
+						</footer>
+					</div>
+				</section>
+	
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade" style="background-color:black;">
 					<div class="container">
