--- a/index.html
+++ b/index.html
@@ -108,15 +108,17 @@
 							</ul>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
+									<span class="icon alt major fa-paper-plane"></span>
+									<h3>Recognition</h3>
 									<li><a href="" class="button">World Book of Records</a></li>
 							</ul>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
-									<li><a href="no-sidebar.html" class="button">Speaking</a></li>
+									<h3>LinkedIn</h3>
+									<li><a href="https://www.linkedin.com/in/govindrkannan" class="button">Professional Profile</a></li>
 							</ul>
-								</section>
+							<!-- 	</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
 									<li><a href="https://govindrkannan.github.io/images/Govind.pdf" class="button">Resume</a></li>
@@ -130,8 +132,8 @@
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<li><a href="index.html" class="button">For a Change, Defend</a></li>
-							</ul>
+									<li><a href="index.html" class="button">For a Change, Defend</a></li> 
+							</ul>  -->
 								</section>
 							</div>
 						</div>
