--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							</div>
 						</div>
 					</div>
-					<a href="#five" class="goto-next scrolly">Next</a>
+					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
 							
@@ -140,6 +140,8 @@
 						<footer class="major">
 						</footer>
 					</div>
+					</div>
+					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 	
 			<!-- Five -->
