--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 							<div class="row uniform">
 								<section class="4u 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Recognition</h3>
- 									<li><a href="" class="button">India Book of Records</a></li>
+									<h3>Appreciation Holder</h3>
+ 									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">India Book of Records</a></li>
 							</ul>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Recognition</h3>
+									<h3>Record Holder</h3>
 									<li><a href="https://worldbookofrecords.uk/records/record_detail/govind-ramachandran--systems-engineer-of-thiruvananthapuram--kerala--india-gets-included-by-world-book-of-records---london710" class="button">World Book of Records</a></li>
 							</ul>
 								</section>
