--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
-									<h3>LinkedIn</h3>
-									<li><a href="https://www.linkedin.com/in/govindrkannan" class="button">Professional Profile</a></li>
+									<h3>WBR Live</h3>
+									<li><a href="http://wbrlive.uk/mr-govind-ramachandran-from-thiruvananthapuram-kerala-india-gets-included-by-world-book-of-records" class="button">Professional Profile</a></li>
 							</ul>
 							<!-- 	</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
