--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
+			<!-- Three -->
+	<!-- 		<h2>HTML Image</h2> 	-->
+			<html><body>
+			<img src="img_chania.jpg" alt="Abstract" width="460" height="345"></body></html>
 							
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
