--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 				</section>
 
 			<!-- Three -->
-	<!-- 		<h2>HTML Image</h2> 	-->
-			<html><body>
-			<img src="img_chania.jpg" alt="Abstract" width="460" height="345"></body></html>
+	
+			<html> <body>
+			<span><img src="images/abstract.jpg" alt="" /></span></body></html>
 							
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
