--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<!-- Three -->
 	
 			<html> <body>
-			<span><img src="images/abstract.jpg" alt="" /></span></body></html>
+			<span><img src="images/BOR.jpg" alt="" /></span></body></html>
 							
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
