--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<h1>  </h1>
 							<h2> Govind Ramachandran </h2>
 							<h3> Nick Name : Kannan (My Close Friends Call me the Same) </h3>
-							<h3> Systems Engineer @ UST ✪ NOC/IMS/CIS Specialist </h3>
+							<h3> Associate II - CIS @ UST ✪ NOC/IMS/CIS Specialist </h3>
 							<h3> Record Holder @ World / India / Asia Book of Records </h3>
 							<h4> ITIL® 4 Certified ✪ 10x Microsoft & Azure Certified Expert/IBM Certified </h4>
 							<h5> <i> Being Myself Got Me to Where I am Today 😉 </i></h5>
