--- a/index.html
+++ b/index.html
@@ -104,44 +104,43 @@
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
-							<section class="4u 6u(medium) 12u$(xsmall)">
-						<span class="icon alt major fa-paper-plane"></span>
-						<h3>Record Holder</h3>
-						<li><a href="https://worldbookofrecords.uk/records/record_detail/govind-ramachandran--systems-engineer-of-thiruvananthapuram--kerala--india-gets-included-by-world-book-of-records---london710" class="button">World Book of Records</a></li>
-						</ul>
-							</section>
-							<section class="4u 6u(medium) 12u$(xsmall)">
-							<span class="icon alt major fa-file"></span>
-							<ul class="actions">
-							<li><a href="https://indiabookofrecords.in/maximum-certifications-taken-by-an-individual" class="button">Get Involved</a></li>
+								<section class="4u 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<h3>Record Holder</h3>
+ 									<li><a href="https://worldbookofrecords.uk/records/record_detail/govind-ramachandran--systems-engineer-of-thiruvananthapuram--kerala--india-gets-included-by-world-book-of-records---london710" class="button">World Book of Records</a></li>
 							</ul>
-							</section>
-								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-								<li><a href="https://www.asiabookofrecords.com/maximum-certifications-taken-by-an-individual" class="button">For a Change, Defend</a></li> 
-							</ul>  -->
 								</section>
+								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Appreciation Holder</h3>
- 									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">India Book of Records</a></li>
+									<h3>Record Holder</h3>
+									<li><a href="https://www.asiabookofrecords.com/maximum-certifications-taken-by-an-individual" class="button">Asia Book of Records</a></li>
 							</ul>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-flask"></span>
 									<h3>Record Holder</h3>
-									<li><a href="http://wbrlive.uk/mr-govind-ramachandran-from-thiruvananthapuram-kerala-india-gets-included-by-world-book-of-records" class="button">WBR Live</a></li>
+									<li><a href="https://indiabookofrecords.in/maximum-certifications-taken-by-an-individual" class="button">India Book of Records</a></li>
 							</ul>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<li><a href="https://govindrkannan.github.io/images/Govind.pdf" class="button">Resume</a></li>
+									<li><a href="http://wbrlive.uk/mr-govind-ramachandran-from-thiruvananthapuram-kerala-india-gets-included-by-world-book-of-records" class="button">WBR Live</a></li>
 							</ul>
 								</section>
-						</div>
-						<footer class="major">
-						</footer>
-					</div>
-					</div>
+								<section class="4u 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-file"></span>
+									<ul class="actions">
+								<li><a href="https://govindrkannan.github.io/images/Govind.pdf" class="button">Resume</a></li>
+							</ul>
+								</section>
+								<section class="4u$ 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<h3>Appreciation Holder</h3>
+									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">India Book of Records</a></li> 
+							</ul> 
+								</section>
+							</div>
+					
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 	
