--- a/index.html
+++ b/index.html
@@ -135,13 +135,14 @@
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Appreciation Holder</h3>
-									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">India Book of Records</a></li> 
+									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">Appreciation - IBR</a></li> 
 							</ul> 
 								</section>
+							<div></div>
 							</div>
 					
 					<a href="#five" class="goto-next scrolly">Next</a>
+					
 				</section>
 	
 			<!-- Five -->
