--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
 							</ul> 
 								</section>
 							</div>
-					
+							</div>
+			
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 	
