--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 							</ul> 
 								</section>
 							</div>
-							</div>
-			
+					
+			                </section>
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</section>
 	
