--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
 							</div>
 					
 			                </section>
+			 		<section>
 					<a href="#five" class="goto-next scrolly">Next</a>
-				</section>
+					</section>
 	
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade" style="background-color:black;">
