--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<!-- Three -->
 	
 			<html> <body>
-			<span><img src="images/BOR.jpg" alt="" /></span></body></html>
+			<span class="image fit main"><img src="images/BOR.jpg" alt="" /></span></body></html>
 							
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
