--- a/expertise.html
+++ b/expertise.html
@@ -42,7 +42,10 @@
 							<li><a href="https://www.instagram.com/govindrkannan"><center>Instagram</center></a></li>
 							<li><a href="https://about.me/govindrkannan"><center>About Me</center></a></li>
 							<li><a href="https://angel.co/u/govindrkannan"><center>Angel List</center></a></li>
+							<li><a href="https://en.gravatar.com/govindrkannan"><center>Gravatar</center></a></li>
 							<li><a href="https://wiseintro.co/govindrkannan"><center>WiseIntro</center></a></li>
+							<li><a href="https://govindrkannan.tumblr.com"><center>Tumblr</center></li>
+							<li><a href="https://linktr.ee/govindrkannan"><center>LinkTree</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 						</ul>
