--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 							<li><a href="https://wiseintro.co/govindrkannan"><center>WiseIntro</center></a></li>
 							<li><a href="https://govindrkannan.tumblr.com"><center>Tumblr</center></li>
 							<li><a href="https://linktr.ee/govindrkannan"><center>LinkTree</center></a></li>
+							<li><a href="https://my.bio/govindrkannan"><center>My Bio</center></a></li>
+							<li><a href="https://allmylinks.com/govindrkannan"><center>All My Links</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 						</ul>
