--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
 									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">Appreciation - IBR</a></li> 
 							</ul> 
 								</section>
+								<section class="4u$ 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<li><a href="https://www.worldrecordcommittee.com/cms/bbs/cms.php?dk_cms=records_05&dk_id=245" class="button">World Record Committee</a></li> 
+							</ul> 
+								</section>
 							</div>
 					
 			                </section>
