--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
 									<li><a href="https://www.worldrecordcommittee.com/cms/bbs/cms.php?dk_cms=records_05&dk_id=245" class="button">World Record Committee</a></li> 
 							</ul> 
 								</section>
+								<section class="4u$ 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<li><a href="https://timesofindia.indiatimes.com/business/startups/people/this-27-year-old-has-done-record-certifications/articleshow/92842110.cms?from=mdr">The Times of India Feature</a></li> 
+							</ul> 
+								</section>
+								<section class="4u$ 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<li><a href="https://www.newindianexpress.com/cities/kochi/2022/jul/22/a-champion-of-two-quests-2479202.html" class="button">The New Indian Express</a></li> 
+							</ul> 
+								</section>
 							</div>
 					
 			                </section>
