--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Record Holder</h3>
 									<li><a href="https://www.worldrecordcommittee.com/cms/bbs/cms.php?dk_cms=records_05&dk_id=245" class="button">World Record Committee</a></li> 
 							</ul> 
 								</section>
@@ -154,8 +153,13 @@
 								</section>
 								<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
-									<li><a href="https://www.newindianexpress.com/cities/kochi/2022/jul/22/a-champion-of-two-quests-2479202.html" class="button">The New Indian Express</a></li> 
+									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">The New Indian Express</a></li> 
 							</ul> 
+								</section>
+							<!--	<section class="4u$ 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<li><a href="" class="button">A</a></li> 
+							</ul>  --!>
 								</section>
 							</div>
 					
