--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<h3> Record Holder @ World ; India & Asia Book of Records </h3>
 							<h4> ITIL® 4 Certified ✪ 10x Microsoft & Azure Certified Expert/IBM Certified </h4>
 							<h5> <i> Being Myself Got Me to Where I am Today 😉 </i></h5>
-							<!--<h4> <i> Only I can change my life. No one can do it for me...👊 </i></h4>--!>
+							<!--<h4> <i> Only I can change my life. No one can do it for me...👊 </i></h4>-->
 							<ul class="buttons vertical list-style-none">
 							<li><a href="#one" class="button fit scrolly">Scroll Down</a></li>
 							</ul>
@@ -159,7 +159,7 @@
 							<!--	<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
 									<li><a href="" class="button">A</a></li> 
-							</ul>  --!>
+							</ul>  -->
 								</section>
 							</div>
 					
