--- a/index.html
+++ b/index.html
@@ -151,11 +151,10 @@
 									<li><a href="https://timesofindia.indiatimes.com/business/startups/people/this-27-year-old-has-done-record-certifications/articleshow/92842110.cms?from=mdr" class="button">The Times of India Feature</a></li> 
 							</ul> 
 								</section>
-								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<li><a href="https://indiabookofrecords.in/govind-ramachandran-appreciation" class="button">The New Indian Express</a></li> 
-							</ul> 
-								</section>
+								<section class="4u$ 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-flask"></span>
+									<li><a href="https://www.newindianexpress.com/cities/kochi/2022/jul/22/a-champion-of-two-quests-2479202.html">The New Indian Express</a></li>
+							</ul>
 							<!--	<section class="4u$ 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
 									<li><a href="" class="button">A</a></li> 
