--- a/index.html
+++ b/index.html
@@ -127,6 +127,23 @@
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
+									<h3>Record Holder</h3>
+									<li><a href="https://www.asiabookofrecords.com/maximum-certifications-taken-by-an-individual" class="button">Asia Book of Records</a></li>
+							</ul>
+								</section>
+								<section class="4u$ 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-flask"></span>
+									<h3>Record Holder</h3>
+									<li><a href="https://indiabookofrecords.in/maximum-certifications-taken-by-an-individual" class="button">India Book of Records</a></li>
+							</ul>
+								</section>
+								<section class="4u 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<li><a href="http://wbrlive.uk/mr-govind-ramachandran-from-thiruvananthapuram-kerala-india-gets-included-by-world-book-of-records" class="button">WBR Live</a></li>
+							</ul>
+								</section>
+								<section class="4u 6u$(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
 									<li><a href="http://wbrlive.uk/mr-govind-ramachandran-from-thiruvananthapuram-kerala-india-gets-included-by-world-book-of-records" class="button">WBR Live</a></li>
 							</ul>
 								</section>
