--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
 									<h3>Record Holder</h3>
 									<li><a href="https://indiabookofrecords.in/maximum-certifications-taken-by-an-individual" class="button">India Book of Records</a></li>
 							</ul>
+								<section class="4u 6u(medium) 12u$(xsmall)">
+									<span class="icon alt major fa-paper-plane"></span>
+									<h3>Record Holder</h3>
+ 									<li><a href="https://worldbookofrecords.uk/records/record_detail/govind-ramachandran--systems-engineer-of-thiruvananthapuram--kerala--india-gets-included-by-world-book-of-records---london710" class="button">World Book of Records</a></li>
+							</ul>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-paper-plane"></span>
@@ -135,11 +140,6 @@
 									<span class="icon alt major fa-flask"></span>
 									<h3>Record Holder</h3>
 									<li><a href="https://indiabookofrecords.in/maximum-certifications-taken-by-an-individual" class="button">India Book of Records</a></li>
-							</ul>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<li><a href="http://wbrlive.uk/mr-govind-ramachandran-from-thiruvananthapuram-kerala-india-gets-included-by-world-book-of-records" class="button">WBR Live</a></li>
 							</ul>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
