--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<a href="" class="button also">Certifications</a>
 							<ul>
 							<li><a href="https://www.credly.com/users/govindrkannan"><center>Credly Profile</center></a></li>
-							<li><a href="https://www.credential.net/profile/govindr"><center>Credential</center></a></li>
+							<li><a href="https://www.credential.net/profile/govindrkannan"><center>Credential</center></a></li>
 							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
 							<li><a href="https://app.pluralsight.com/profile/govindrkannan"><center>Pluralsight</center></a></li>
 							<li><a href="https://trailblazer.me/id/govindrkannan"><center>Trailblazer</center></a></li>
