--- a/expertise.html
+++ b/expertise.html
@@ -23,10 +23,8 @@
 							<li>
 							<a href="" class="button also">Certifications</a>
 							<ul>
-							<li><a href="https://bit.ly/GRGCP"><center>Google Certified</center></li>
 							<li><a href="https://www.credly.com/users/govindrkannan"><center>Credly Profile</center></a></li>
-							<li><a href="https://www.axelos.com/profile/public?u=c009332f-f055-4397-a54b-374b655f1d6f"><center>Axelos Profile</center></a></li>
-							<li><a href="https://www.credential.net/profile/govindr"><center>Credential</center></a></li>
+							<li><a href="https://www.credential.net/profile/govindrkannan"><center>Credential</center></a></li>
 							<li><a href="https://docs.microsoft.com/en-us/users/govindrkannan"><center>Microsoft Learn</center></a></li>
 							<li><a href="https://app.pluralsight.com/profile/govindrkannan"><center>Pluralsight</center></a></li>
 							<li><a href="https://trailblazer.me/id/govindrkannan"><center>Trailblazer</center></a></li>
@@ -46,6 +44,8 @@
 							<li><a href="https://wiseintro.co/govindrkannan"><center>WiseIntro</center></a></li>
 							<li><a href="https://govindrkannan.tumblr.com"><center>Tumblr</center></li>
 							<li><a href="https://linktr.ee/govindrkannan"><center>LinkTree</center></a></li>
+							<li><a href="https://my.bio/govindrkannan"><center>My Bio</center></a></li>
+							<li><a href="https://allmylinks.com/govindrkannan"><center>All My Links</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 						</ul>
