--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Crunchbase</h2>
-										<p>Learn More About Me</p>
+										<h2>My Professional Profiles</h2>
+										<p>Follow Me & Learn More About Me</p>
 									</header>
-								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">My Professional Profile</a></li>
+								<li class="list-style-none"><a href="https://twitter.com/govindrkannan" class="button">Follow Me on Twitter</a></li>
+								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">Crunchbase Profile</a></li>									
 								</div>
 						
 							</div>
