--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<h2>My Professional Profiles</h2>
 										<p>Follow Me & Learn More About Me</p>
 									</header>
-								<li class="list-style-none"><a href="https://twitter.com/govindrkannan" class="button">Follow Me on Twitter</a></li>
+								<li class="list-style-none"><a href="https://twitter.com/govindrkannan" class="button">Follow Me on Twitter</a></li> <br></br>
 								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">Crunchbase Profile</a></li>									
 								</div>
 						
