--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 							<li><a href="https://linktr.ee/govindrkannan"><center>LinkTree</center></a></li>
 							<li><a href="https://my.bio/govindrkannan"><center>My Bio</center></a></li>
 							<li><a href="https://allmylinks.com/govindrkannan"><center>All My Links</center></a></li>
+							<li><a href="https://lnk.bio/govindrkannan"><center>Lnk.Bio</center></a></li>
 							</ul></li>
 							<li><a href="images/Govind.pdf" class="button special">Resume</a></li>
 						</ul>
