--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
+			<!--Two -->
+			<html>
+	<iframe src="https://github.com/sponsors/govindrkannan/card" title="Sponsor govindrkannan" height="225" width="600" style="border: 0;"></iframe>
+			</html>
 			<!-- Three -->
 	
 			<html> <body>
@@ -157,7 +161,6 @@
 									<span class="icon alt major fa-paper-plane"></span>
 									<li><a href="https://www.newindianexpress.com/cities/kochi/2022/jul/22/a-champion-of-two-quests-2479202.html" class="button">The New Indian Express</a></li> 
 							</ul> 
-<iframe src="https://github.com/sponsors/govindrkannan/card" title="Sponsor govindrkannan" height="225" width="600" style="border: 0;"></iframe>
 								</section>
 							</div>
 					
