--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 				</section>
 
 			<!--Two -->
-			<html>
-	<iframe src="https://github.com/sponsors/govindrkannan/card" title="Sponsor govindrkannan" height="225" width="600" style="border: 0;"></iframe>
-			</html>
+			<section><html>
+		<iframe src="https://github.com/sponsors/govindrkannan/card" title="Sponsor govindrkannan" height="225" width="600" style="border: 0;"></iframe>
+			</html></section>
 			<!-- Three -->
 	
 			<html> <body>
