--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
 				</section>
 
 			<!--Two -->
-			<section><html><center>
+			<section id="two" class="spotlight style1 bottom">
+			<html><center>
 		<iframe src="https://github.com/sponsors/govindrkannan/card" title="Sponsor govindrkannan" height="225" width="600" style="border: 0;"></iframe>
 			</center> </html></section>
+	
 			<!-- Three -->
 	
 			<html> <body>
