--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				</section>
 
 			<!--Two -->
-			<section id="two" class="spotlight style1 bottom">
+			<section id="two" class="wrapper style1 special fade-up">
 			<html><center>
 		<iframe src="https://github.com/sponsors/govindrkannan/card" title="Sponsor govindrkannan" height="225" width="600" style="border: 0;"></iframe>
 			</center> </html></section>
