--- a/index.html
+++ b/index.html
@@ -93,15 +93,17 @@
 							</div>
 						</div>
 					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!--Two -->
 			<section id="two" class="wrapper style1 special fade-up">
-			<html><center>
+			<div><html><center>
 		<iframe src="https://github.com/sponsors/govindrkannan/card" title="Sponsor govindrkannan" height="225" width="600" style="border: 0;"></iframe>
-			</center> </html></section>
-	
+			</center> </html>
+				</div>
+			<a href="#four" class="goto-next scrolly">Next</a>
+			</section>
 			<!-- Three -->
 	
 			<html> <body>
