--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
      crossorigin="anonymous"></script>
-						
+	
+
+<meta name="p:domain_verify" content="e9c668d3ca510393cf33aeae53585af0"/>
+
 </html>
 <!--HTML -LANDED-->
