--- a/index.html
+++ b/index.html
@@ -223,4 +223,16 @@
      crossorigin="anonymous"></script>
 	
 </html>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4WHX2N15BM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4WHX2N15BM');
+</script>
+
 <!--HTML -LANDED-->
