--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 										<h2>My Professional Profiles</h2>
 										<p>Follow Me & Learn More About Me</p>
 									</header>
-								<li class="list-style-none"><a href="https://twitter.com/intent/follow?screen_name=govindrkannan" class="button">Follow Me on Twitter</a></li> <br></br>
-								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">Crunchbase Profile</a></li>									
+								<!-- <li class="list-style-none"><a href="https://twitter.com/intent/follow?screen_name=govindrkannan" class="button">Follow Me on Twitter</a></li> <br></br> -->
+								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">Crunchbase Profile</a></li>		
+								<li class="list-style-none"><a href="https://lnk.bio/govindrkannan" class="button">Find Me on Lnk Bio</a></li>		
 								</div>
 						
 							</div>
