--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									</header>
 								<!-- <li class="list-style-none"><a href="https://twitter.com/intent/follow?screen_name=govindrkannan" class="button">Follow Me on Twitter</a></li> <br></br> -->
 								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">Crunchbase Profile</a></li> <br></br>		
-								<li class="list-style-none"><a href="https://lnk.bio/govindrkannan" class="button">Find Me on Lnk Bio</a></li>		
+								<li class="list-style-none"><a href="https://lnk.bio/govindrkannan" class="button">Find My Full Profile Links</a></li>		
 								</div>
 						
 							</div>
