--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 										<p>Follow Me & Learn More About Me</p>
 									</header>
 								<!-- <li class="list-style-none"><a href="https://twitter.com/intent/follow?screen_name=govindrkannan" class="button">Follow Me on Twitter</a></li> <br></br> -->
-								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">Crunchbase Profile</a></li> <br></br>		
-								<li class="list-style-none"><a href="https://lnk.bio/govindrkannan" class="button">Find My Full Profile Links</a></li>		
+								<li class="list-style-none"><a href="https://twitter.com/intent/follow?screen_name=govindrkannan" class="button"></a></li> <br>Follow Me on Twitter</br>		
+								<li class="list-style-none"><a href="https://www.crunchbase.com/person/govind-r" class="button">Top Ranked Crunchbase Profile</a></li>		
 								</div>
 						
 							</div>
