--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
 					<div class="container">
 						<header>
 							<h2>Get In Touch </h2>
+							
+							<p>Contact Me: grk@govindrkannan.com </p>
+							<p>Contact Me: govindgovindrkannan.com </p>
+								<p> Or </p>							
 							<p>Contact Me: govindr015@gmail.com </p>
 							<p>Contact Me: govindr95@outlook.com </p>
 														
