--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 						<header>
 							<h2>Get In Touch </h2>
 							
-							<p>Contact Me: grk@govindrkannan.com </p>
-							<p>Contact Me: govindgovindrkannan.com </p>
+							<p>Contact Me: mailto:grk@govindrkannan.com </p>
+							<p>Contact Me: mailto:govind@govindrkannan.com </p>
 								<p> Or </p>							
-							<p>Contact Me: govindr015@gmail.com </p>
-							<p>Contact Me: govindr95@outlook.com </p>
+							<p>Contact Me: mailto:govindr015@gmail.com </p>
+							<p>Contact Me: mailto:govindr95@outlook.com </p>
 														
 			<li class="list-style-none"><a href="https://api.whatsapp.com/send?phone=919446543585" class="button also">Connect Me on Whatsapp</a></li><br></br>
 			<li class="list-style-none"><a href="https://www.linkedin.com/in/govindrkannan" class="button also">Follow me on LinkedIn</a></li><br></br>
