--- a/expertise.html
+++ b/expertise.html
@@ -131,6 +131,18 @@
 		<li class="list-style-none"><center><a href="https://www.linkedin.com/in/govindrkannan" class="button also">Follow & Connect me on LinkedIn</a></center></li>
 		<br></br>
 		</div>
+						
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
+     crossorigin="anonymous"></script>
+<!-- Fixed 800 x 450 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:800px;height:450px"
+     data-ad-client="ca-pub-6927067584755700"
+     data-ad-slot="8949228952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>						
+						
 	</section>
 
 							</div>
