--- a/about.html
+++ b/about.html
@@ -82,6 +82,19 @@
 		<h3>Personal Statement</h3>
 		<p> All are equal but everyone is unique on their capabilities</p>
 		</header>	
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
+     crossorigin="anonymous"></script>
+<!-- Fixed 800 x 450 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:800px;height:450px"
+     data-ad-client="ca-pub-6927067584755700"
+     data-ad-slot="8949228952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+			
 <!-- Image -->
 				
 			<!-- Footer -->
