--- a/index.html
+++ b/index.html
@@ -173,6 +173,17 @@
 			 		<section>
 					<a href="#five" class="goto-next scrolly">Next</a>
 					</section>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
+     crossorigin="anonymous"></script>
+<!-- Fixed 800 x 450 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:800px;height:450px"
+     data-ad-client="ca-pub-6927067584755700"
+     data-ad-slot="8949228952"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade" style="background-color:black;">
