--- a/about.html
+++ b/about.html
@@ -83,8 +83,7 @@
 		<p> All are equal but everyone is unique on their capabilities</p>
 		</header>	
 
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
+<center><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
      crossorigin="anonymous"></script>
 <!-- Fixed 800 x 450 -->
 <ins class="adsbygoogle"
@@ -93,7 +92,7 @@
      data-ad-slot="8949228952"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></center>
 			
 <!-- Image -->
 				
