--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<a href="#five" class="goto-next scrolly">Next</a>
 					</section>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
+<center><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6927067584755700"
      crossorigin="anonymous"></script>
 <!-- Fixed 800 x 450 -->
 <ins class="adsbygoogle"
@@ -183,7 +183,7 @@
      data-ad-slot="8949228952"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></center>
 	
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade" style="background-color:black;">
