--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Govind R</title>
-		<link rel="icon" type="image/x-icon" href="https://profile.govindrkannan.com/images/LogoGK.jpg">
+		<link rel="icon" type="image/x-icon" href="/images/LogoGK.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
